<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/LoginNameView_id"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/login_user"
        android:textColor="#ff0000"
        android:textSize="@dimen/login_lable_size" />

    <EditText
        android:id="@+id/LoginNameEdit_id"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/LoginNameView_id"
        android:background="@drawable/input_bg"
        android:paddingLeft="5px" />

    <TextView
        android:id="@+id/LoginPaswdView_id"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/LoginNameView_id"
        android:gravity="center"
        android:text="@string/login_pwd"
        android:textColor="#ff0000"
        android:textSize="@dimen/login_lable_size" />

    <EditText
        android:id="@+id/LoginPaswdEdit_id"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/LoginNameEdit_id"
        android:layout_toRightOf="@id/LoginPaswdView_id"
        android:background="@drawable/input_bg"
        android:paddingLeft="5px"
        android:password="true"
        android:text="john" />
	    <CheckBox
		  android:id="@+id/Rebm_Passwd_check_id"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_alignLeft="@id/LoginPaswdEdit_id"
		  android:layout_below="@id/LoginPaswdEdit_id"
		  android:paddingRight="10dp"
	   />
	    <TextView
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/login_rember"
		  android:gravity="center"
		  android:textColor="#ff0000"
		  android:layout_alignBaseline="@id/Rebm_Passwd_check_id"
		  android:layout_toRightOf="@id/Rebm_Passwd_check_id"
		  android:layout_below="@id/LoginPaswdEdit_id"
		  android:textSize="@dimen/login_rember"
	    />

    <Button
        android:id="@+id/LoginInBtn_id"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/LoginPaswdEdit_id"
        android:layout_below="@id/Rebm_Passwd_check_id"
        android:background="@drawable/btn_selector"
        android:text="@string/login_login"
        android:textColor="#143C8C"
        android:textSize="@dimen/login_btn_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LoginOutBtn_id"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignRight="@id/LoginPaswdEdit_id"
        android:layout_below="@id/Rebm_Passwd_check_id"
        android:background="@drawable/btn_selector"
        android:text="@string/login_quit"
        android:textColor="#143C8C"
        android:textSize="@dimen/login_btn_size"
        android:textStyle="bold" />

</RelativeLayout>