<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0" >
    
	<RelativeLayout 
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:id="@+id/search_layout_id"
	  >
	 <Spinner 
	 android:id="@+id/department_list_id"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true">
     </Spinner>
	 <AutoCompleteTextView
	  android:id="@+id/search_text_id"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_alignParentLeft="true"
	  android:completionThreshold="1"
	  android:hint="@string/msg_search_text"
	  android:layout_below="@id/department_list_id"
	  />
	  <ImageView
	  android:id="@+id/search_btn_id"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:src="@drawable/search"
	  android:layout_alignRight="@id/search_text_id"
	  android:layout_alignBottom="@id/search_text_id"
	  android:paddingBottom="5dp"
	  android:visibility="gone"
	  />
	  
	 </RelativeLayout>
	 
    <ListView
        android:id="@+id/contact_list_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/search_layout_id"
        android:background="#f0f0f0"
        android:cacheColorHint="#00000000" />

    <ProgressBar
        android:id="@+id/loading_progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/disscus_text_list_id"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/barcolor"
        android:visibility="gone" />
   <LinearLayout 
   android:id="@+id/promp_layout_id"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:layout_centerInParent="true"
   android:visibility="gone">
   <TextView
   android:paddingLeft="10dp"
   android:paddingRight="10dp"
   android:paddingTop="40dp"
   android:textSize="@dimen/contact_text"
   android:textColor="#000000"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:text="@string/msg_contacts_syn"
   />
   <Button
   android:id="@+id/btn_syn_id"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:paddingLeft="10dp"
   android:paddingRight="10dp"
   android:gravity="center"
   android:text="@string/btn_syn" 
   />
   </LinearLayout>
</RelativeLayout>